# Minos

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  GRACEFUL_SHUTDOWN_IMPLEMENTATION.md  GRACEFUL_SHUTDOWN_SUMMARY.md  HARDWARE_TEST_SETUP.md  IMPROVEMENT_ROADMAP.md  IMPROVEMENT_ROADMAP_v2.md  IMPROVEMENT_ROADMAP_v3.md  MANAGEMENT_SUMMARY.md  PLAN.md  README.md  ROADMAP.md  api_full_content.txt  concepts.html  config.toml.example  config.toml.scenes.toml  deploy.sh  dev-config.toml  device_drop_impl.patch  intro.html  print.html  searcher-c2a407aa.js  searchindex-59eb6fd6.js  toc-0ffda84a.js  toc.html  watchdog.sh
.github/workflows/: ci.yml  docs.yml  release.yml  ui-smoke.yml
.superpowers/brainstorm/46609-1777787791/state/: server-info
.superpowers/brainstorm/46701-1777787862/content/: dante-context.html  dante-layout-options.html  waiting-design-1.html
.superpowers/brainstorm/46701-1777787862/state/: server-stopped
api/: auth.html  endpoints.html  index.html
concepts/: dsp.html  scenes.html  topology.html
config/: dante.html  index.html  statime.toml.example  toml.html
crates/patchbox/: Cargo.toml  build.rs
crates/patchbox-control-surface/: Cargo.toml
crates/patchbox-control-surface/src/: feedback.rs  lib.rs  mapping.rs  midi.rs  osc.rs
crates/patchbox-core/: Cargo.toml
crates/patchbox-core/fuzz/: .gitignore  Cargo.toml  README.md
crates/patchbox-core/fuzz/corpus/config_from_json/: malformed.json  valid_minimal.json
crates/patchbox-core/fuzz/corpus/dsp_block_json/: new_envelope.json  old_flat.json  weird_types.json
crates/patchbox-core/fuzz/corpus/matrix_json/: malformed.json  valid_config.json
crates/patchbox-core/fuzz/fuzz_targets/: config_from_json.rs  config_from_toml.rs  dsp_block_json.rs  matrix_json.rs
crates/patchbox-core/src/: bus.rs  compressor.rs  config.rs  control.rs  eq.rs  gain.rs  lib.rs  matrix.rs  meters.rs  metrics.rs  scene.rs  strip.rs
crates/patchbox-core/src/dsp/: aec.rs  automixer.rs  compressor.rs  delay.rs  deq.rs  ducker.rs  envelope.rs  eq.rs  feedback.rs  filters.rs  gate.rs  limiter.rs  lufs.rs  mod.rs
crates/patchbox-core/tests/: dsp_envelope.rs  dsp_known_answer.rs  dsp_tests.rs  matrix_proptest.rs
crates/patchbox-dante/: Cargo.toml
crates/patchbox-dante/src/: bridge.rs  device.rs  lib.rs  monitor.rs  qos.rs  sample_conv.rs  stub.rs
crates/patchbox/src/: ab_compare.rs  api.rs  auth_api.rs  config.rs  jwt.rs  lib.rs  main.rs  morph.rs  openapi.rs  pam_auth.rs  presets.rs  ptp.rs  scenes.rs  state.rs  tui.rs
crates/patchbox/src/api/: assets.rs  atomic_write.rs  auth.rs  mod.rs  openapi.rs  routes.rs  ws.rs
crates/patchbox/src/api/routes/: buses.rs  dsp.rs  inputs.rs  mod.rs  outputs.rs  presets.rs  routing.rs  scenes.rs  system.rs  zones.rs
crates/patchbox/tests/: api_ab_compare.rs  api_audit.rs  api_auth.rs  api_batch_update.rs  api_buses.rs  api_channels.rs  api_config_backup.rs  api_dante_diagnostics.rs  api_dsp.rs  api_health.rs  api_inputs.rs  api_integration.rs  api_metrics.rs  api_outputs.rs  api_rbac.rs  api_routing.rs  api_scenes.rs  api_task_bulk.rs  api_tests.rs  api_zone_scope.rs  api_zone_templates.rs  api_zones_crud_routes_and_outputs.rs  api_zones_stable_ids.rs  build_feature_guards.rs  docs_route.rs  openapi.rs  state_snapshot.rs
crates/patchbox/tests/common/: mod.rs
crates/patchbox/tests/snapshots/: state_snapshot__config.snap  state_snapshot__health.snap
deploy/: BUILD.md  patchbox.service
docker/: docker-compose.yml
docs/: AUDIO_ENGINE.md  CONTROL_SURFACE.md  DESIGN.md  DSP_PANELS.md  PERFORMANCE_RESEARCH.md  PROJECT.md  README.md  SCENE_SCHEDULER.md  api.md  architecture.md  book.toml  operations.md
docs/src/: SUMMARY.md  concepts.md  intro.md
docs/src/api/: auth.md  endpoints.md  index.md
docs/src/concepts/: dsp.md  scenes.md  topology.md
docs/src/config/: dante.md  index.md  toml.md
docs/src/ops/: deploy.md  index.md  troubleshoot.md  upgrade.md
docs/src/ui/: index.md  matrix.md  mixer.md  panels.md  scenes.md  system.md  zones.md
docs/superpowers/plans/: 2026-05-03-dante-health-command-center.md
docs/superpowers/specs/: 2026-05-03-dante-health-command-center-design.md  2026-05-03-system-tab-design.md
examples/: atomic_write_demo.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_api_json.rs  fuzz_scene_name.rs
ops/: deploy.html  index.html  troubleshoot.html  upgrade.html
scripts/: deploy.sh  fuzz.sh  gen-dsp-defaults.sh  install-arch.sh
systemd/: dante-patchbox.service
tests/: install-arch-statime.sh
tests/playwright/: README.md
tests/ui/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
tests/ui/src/: global-setup.ts  global-teardown.ts  smoke.spec.ts
ui/: index.html  matrix.html  mixer.html  panels.html  scenes.html  system.html  zones.html
web/: .eslintrc.json
web-ui/: app.js  index.html  manifest.json  style.css  sw.js
web/src/: app.js  index.html  style.css  types.js  zone.html  zone.js
web/src/css/: base.css  dante.css  matrix.css  mixer.css  panels.css  reorder.css  scenes.css  shell.css  system.css  zones.css
web/src/js/: api.js  dante.js  dsp-defaults.js  fader-taper.js  help.js  main.js  matrix.js  metering.js  mixer.js  modal.js  panels.js  reorder.js  scenes.js  shortcuts.js  state.js  system.js  toast-v2.js  toast.js  undo.js  ws.js  zones.js
web/src/js/components/: strip.js
web/src/js/dsp/: aec.js  afs.js  am.js  axm.js  bus-routing.js  cmp.js  colours.js  common.js  deq.js  dly.js  duc.js  dyn.js  flt.js  gte.js  lim.js  peq.js  registry.js
web/src/modules/: api.js  dsp-defaults.js  router.js  ws.js
web/src/modules/components/: aec-section.js  afs-section.js  automixer-section.js  channel-strip.js  compressor-section.js  delay-section.js  dsp-canvas.js  dynamic-eq-section.js  eq-section.js  filter-section.js  gate-section.js  limiter-section.js  nav-sidebar.js  vu-meter.js
web/src/modules/pages/: buses.js  dante.js  dashboard.js  inputs.js  matrix.js  mixer.js  outputs.js  scenes.js  style-guide.js  system.js  zones.js
