[workspace]
members = [
    "crates/patchbox-core",
    "crates/patchbox-dante",
    "crates/patchbox",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
patchbox-core  = { path = "crates/patchbox-core" }
patchbox-dante = { path = "crates/patchbox-dante" }

# Async runtime
tokio   = { version = "1", features = ["full"] }
# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
# Error handling
anyhow    = "1"
thiserror = "1"
# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI
clap = { version = "4", features = ["derive", "env"] }
