[workspace]
members = [
    "crates/patchbox-core",
    "crates/patchbox-dante",
    "crates/patchbox",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
# O-04: Minimum Supported Rust Version — keep in sync with CI toolchain pin.
rust-version = "1.80"

[workspace.dependencies]
patchbox-core  = { path = "crates/patchbox-core" }
patchbox-dante = { path = "crates/patchbox-dante" }

# Async runtime
tokio   = { version = "1", features = ["full"] }
# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
# Error handling
anyhow    = "1"
thiserror = "1"
# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# CLI
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
# O-03: LTO + strip for minimal binary (~60% smaller) and best runtime performance.
lto            = true
strip          = true
codegen-units  = 1
opt-level      = 3
panic          = "abort"
