[package]
name = "patchbox-control-surface"
version = "0.1.0"
edition = "2021"
publish = false

# S7 s7-feat-midi-osc — MIDI + OSC control surface bridge.
# Scaffold only — not yet wired into workspace.
#
# Planned dependencies:
#   midir = "0.10"
#   rosc  = "0.10"
#   tokio = { version = "1", features = ["net", "sync", "rt"] }
#   serde = { version = "1", features = ["derive"] }

[dependencies]
