[package]
name = "patchbox-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aec3 = { version = "0.1.7", optional = true }
ebur128 = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
utoipa = { version = "5", features = ["macros"] }

[dev-dependencies]
serde_json = "1"
proptest = "1"

[features]
default = []
aec = ["dep:aec3"]
