[package]
name = "patchbox-dante"
version = "0.1.0"
edition = "2021"

[features]
default = []
inferno = ["dep:inferno_aoip"]

[dependencies]
patchbox-core = { path = "../patchbox-core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
atomic = "0.6"
triple_buffer = "9"

[target.'cfg(feature = "inferno")'.dependencies]
inferno_aoip = { git = "https://github.com/legopc/inferno", branch = "dev", optional = true }
libc = "0.2"
