[package]
name = "patchbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "patchbox"
path = "src/main.rs"

[dependencies]
patchbox-core = { path = "../patchbox-core" }
patchbox-dante = { path = "../patchbox-dante" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
