[package]
name = "patchbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "patchbox"
path = "src/main.rs"

[dependencies]
patchbox-core = { path = "../patchbox-core" }
patchbox-dante = { path = "../patchbox-dante" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
jsonwebtoken = "9"
thiserror = "2"

toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-embed = { version = "8" }
clap = { version = "4", features = ["derive"] }
[lib]
name = "patchbox"
path = "src/lib.rs"

[features]
default = []
inferno = ['patchbox-dante/inferno']
