[package]
name = "patchbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "patchbox"
path = "src/main.rs"

[dependencies]
patchbox-core = { path = "../patchbox-core" }
patchbox-dante = { path = "../patchbox-dante" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
jsonwebtoken = "9"
thiserror = "2"

toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-embed = { version = "8" }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
governor = "0.6"
[lib]
name = "patchbox"
path = "src/lib.rs"

[features]
default = []
inferno = ['patchbox-dante/inferno']
aec = ['patchbox-core/aec']

[dev-dependencies]
tempfile = "3"
insta = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
