[package]
name = "patchbox-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", optional = true }
patchbox-core = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Enables libFuzzer harnesses. Without this feature you can `cargo check` the targets on stable
# without needing a C++ toolchain.
fuzzing = ["dep:libfuzzer-sys"]

[profile.release]
debug = 1

[[bin]]
name = "config_from_json"
path = "fuzz_targets/config_from_json.rs"
test = false
doc = false

[[bin]]
name = "dsp_block_json"
path = "fuzz_targets/dsp_block_json.rs"
test = false
doc = false

[[bin]]
name = "matrix_json"
path = "fuzz_targets/matrix_json.rs"
test = false
doc = false

# Keep this package out of the parent workspace.
[workspace]
